test/types/type_variables/deitz/test_query_field7.good
test_query_field7.chpl:24: error: unresolved call 'foo(C(real(64),int(64)), C(real(64),real(64)))'
test_query_field7.chpl:8: note: candidates are: foo(c: C(int, ?tt) ...?k)
test_query_field7.chpl:15: note:                 foo(c: C(real, ?tt) ...?k)
